Added  README + demo and made close / update use the singleton

--- a/src/ImGui.NET.FSharp.Sample/ImGui.NET.FSharp.Sample.fsproj
+++ b/src/ImGui.NET.FSharp.Sample/ImGui.NET.FSharp.Sample.fsproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Script.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 
   <ItemGroup>
     <ProjectReference Include="..\ImGui.NET.FSharp\ImGui.NET.FSharp.fsproj" />
