--- a/src/ImGui.NET.FSharp.Sample/imgui.ini
+++ b/src/ImGui.NET.FSharp.Sample/imgui.ini
@@ -14,12 +14,17 @@ Size=116,146
 Collapsed=0
 
 [Window][Original]
-Pos=60,60
-Size=236,118
+Pos=26,27
+Size=483,296
 Collapsed=0
 
 [Window][Updated!]
 Pos=60,60
-Size=282,160
+Size=171,114
+Collapsed=0
+
+[Window][Window 1]
+Pos=60,60
+Size=104,92
 Collapsed=0
 
