Added Elmish examples

--- a/src/ImGui.NET.FSharp.Sample/ImGui.NET.FSharp.Sample.fsproj
+++ b/src/ImGui.NET.FSharp.Sample/ImGui.NET.FSharp.Sample.fsproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Script.fsx" />
+    <None Include="ElmishMultipage.fsx" />
+    <None Include="ElmishSimple.fsx" />
+    <None Include="SimpleHotReload.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
